--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,14 @@
 #   in _config.yml. It will appear in your document head meta (for Google search
 #   results) and in your feed.xml site description.
 
+title: Jake's Bodacious Blog
+
+author:
+  name: Jake Nurkin
+  email: nurkinjk@hendrix.edu
+
+description: >
+  Welcome to my bodacious blog! Enjoy!
 
 # Build settings
 # --------------
